test/corpus/pebble.txt
================================================================================
Initial code
================================================================================
plan dummy {
  do "task 1"
  do "task 2"
}

--------------------------------------------------------------------------------
(source_file
  (plan (text)
    (do (quoted_text))
    (do (quoted_text))
  )
)

================================================================================
Repeat
================================================================================
plan dummy {
  do "task 1"
  do "task 2"
  repeat 2 {
    do "task 3"
  }
}

--------------------------------------------------------------------------------
(source_file
  (plan (text)
    (do (quoted_text))
    (do (quoted_text))
    (repeat (count) (do (quoted_text)))
  )
)